--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-table": "^7.7.0",
     "readline": "^1.3.0",
     "universal-cookie": "^4.0.4",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "serve":"^12.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
