--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "serve -s build",
-    "bbuild": "react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
