--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "process.exit(1)",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
