--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "",
+    "bbuild":"react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
